# DataAnalysis_euPOWERED_Navigator

./: .gitattributes  .gitignore  README.md  brand.css  custom.mplstyle  dashboard.py  figures.py  preproc_code.py  pyproject.toml  requirements.txt  scraper_code.py
data/: eu_efta_countries.csv  preprocessed_data.csv  scraper_data.csv  scraper_metadata.csv
reports/: euPOWERED_Navigator_presentation.pptx
