[project]
name = "eupowered-navigator"
version = "0.1.0"
description = "Visualization of a decade of EU energy statistics from Eurostat."
authors = [
    {name = "Dominika Drazyk",email = "dominika.a.drazyk@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pyjstat (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "requests (>=2.33.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "selenium (>=4.43.0,<5.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "protobuf (>=7.34.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
